--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body{
     padding: 0;
     margin: 0;
-    background-color: #04202e;
+    background-color: blue;
     font-family: 'Titillium Web', sans-serif;
 }
 
