--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* ------------ youtube.com/CodeExplained ------------ */
 body{
     padding: 0;
-    margin: 150px 0 0 0;
+    margin: 0;
     background-color: #04202e;
     font-family: 'Titillium Web', sans-serif;
 }
@@ -9,13 +9,13 @@ body{
 /* ------------ container ------------ */
 .container{
     padding:10px;
-    width:380px;
+    width:100%;
     margin:0 auto;
 }
 
 /* ------------ header ------------ */
 .header{
-    width: 380px;
+    width: 100%;
     height:200px;
     background-image: url('img/bg2.jpg');
     background-size: 100% 200%;
@@ -23,6 +23,9 @@ body{
     border-radius: 15px 15px 0 0;
     position: relative;
 }
+
+
+
 .mainTitle {
 text-align: center;
 color: white;
@@ -54,21 +57,21 @@ color: white;
 
 /* ------------ content ------------ */
 .content{
-    width:380px;
+    width:100%;
     height: 350px;
     max-height:350px;
     background-color: #FFF;
     overflow: auto;
 }
-.content::-webkit-scrollbar { 
-    display: none; 
+.content::-webkit-scrollbar {
+    display: none;
 }
 .content ul{
     padding:0;
     margin:0;
 }
 .item{
-    width:380px;
+    width:auto;
     height: 45px;
     min-height: 45px;
     position: relative;
@@ -79,10 +82,10 @@ color: white;
 }
 .item i.co{
     position: absolute;
-    font-size: 25px;
+    font-size: 30px;
     padding-left:5px;
     left:15px;
-    top:10px;
+    top:8px;
 }
 .item i.co:hover{
     cursor: pointer;
@@ -95,8 +98,8 @@ color: white;
     padding:0;
     margin:0;
     font-size: 20px;
-    left:50px;
-    top:5px;
+    left:90px;
+    top:12px;
     background-color: #FFF;
     max-width:285px;
 }
@@ -117,7 +120,7 @@ color: white;
 /* ------------ add item ------------ */
 .add-to-do{
     position: relative;
-    width: 360px;
+    width: 100%;
     height:40px;
     background-color: #FFF;
     padding: 10px;
@@ -159,31 +162,3 @@ color: white;
     font-family: 'Titillium Web', sans-serif;
     font-size: 20px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
