--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ color: white;
     position: absolute;
     left: 50px;
     height: 35px;
-    width: 310px;
+    width: 100%;
     background-color: transparent;
     border: none;
     font-size: 20px;
