--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body{
     margin: 0 40px 0 20px;
     background-color: #04202e;
     font-family: 'Titillium Web', sans-serif;
+    text-align: center;
 }
 
 /* ------------ container ------------ */
@@ -15,7 +16,7 @@ body{
 
 /* ------------ header ------------ */
 .header{
-    width: 100%;
+    width: 75%;
     height:200px;
     background-image: url('img/bg2.jpg');
     background-size: 100% 200%;
@@ -57,7 +58,7 @@ color: white;
 
 /* ------------ content ------------ */
 .content{
-    width:100%;
+    width:75%;
     height: 350px;
     max-height:350px;
     background-color: #FFF;
@@ -101,7 +102,7 @@ color: white;
     left:90px;
     top:12px;
     background-color: #FFF;
-    max-width:1000px;
+    max-width:60%;
 }
 .lineThrough{
     text-decoration: line-through;
@@ -120,7 +121,7 @@ color: white;
 /* ------------ add item ------------ */
 .add-to-do{
     position: relative;
-    width: 100%;
+    width: 75%;
     height:40px;
     background-color: #FFF;
     padding: 10px;
@@ -136,7 +137,7 @@ color: white;
     position: absolute;
     left: 50px;
     height: 35px;
-    width: 100%;
+    width: 75%;
     background-color: transparent;
     border: none;
     font-size: 20px;
