--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ color: white;
     left:90px;
     top:12px;
     background-color: #FFF;
-    max-width:60%;
+    max-width:500px;
 }
 .lineThrough{
     text-decoration: line-through;
