--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* ------------ youtube.com/CodeExplained ------------ */
 body{
     padding: 0;
-    margin: 0 40px 0 20px;
+    margin: 0;
     background-color: #04202e;
     font-family: 'Titillium Web', sans-serif;
 }
@@ -9,13 +9,13 @@ body{
 /* ------------ container ------------ */
 .container{
     padding:10px;
-    width:75%;
+    width:100%;
     margin:0 auto;
 }
 
 /* ------------ header ------------ */
 .header{
-    width: 75%;
+    width: 100%;
     height:200px;
     background-image: url('img/bg2.jpg');
     background-size: 100% 200%;
@@ -57,7 +57,7 @@ color: white;
 
 /* ------------ content ------------ */
 .content{
-    width:75%;
+    width:100%;
     height: 350px;
     max-height:350px;
     background-color: #FFF;
@@ -101,7 +101,7 @@ color: white;
     left:90px;
     top:12px;
     background-color: #FFF;
-    max-width:500px;
+    max-width:285px;
 }
 .lineThrough{
     text-decoration: line-through;
@@ -120,7 +120,7 @@ color: white;
 /* ------------ add item ------------ */
 .add-to-do{
     position: relative;
-    width: 75%;
+    width: 100%;
     height:40px;
     background-color: #FFF;
     padding: 10px;
@@ -136,12 +136,11 @@ color: white;
     position: absolute;
     left: 50px;
     height: 35px;
-    width: 75%;
+    width: 310px;
     background-color: transparent;
     border: none;
     font-size: 20px;
     padding-left:10px;
-    padding-right: 40px;
 }
 .add-to-do input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     color: #4162f6;
