--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* ------------ youtube.com/CodeExplained ------------ */
 body{
     padding: 0;
-    margin: 0;
+    margin: 0 10% 0 10%;
     background-color: #04202e;
     font-family: 'Titillium Web', sans-serif;
 }
