--- a/styles.css
+++ b/styles.css
@@ -123,13 +123,14 @@ color: white;
     width: 100%;
     height:40px;
     background-color: #FFF;
-    padding: 10px;
+    padding: 10px 0 10px 0;
     border-top: 1px solid rgba(0,0,0,0.1);
 }
 .add-to-do i{
     position: absolute;
     font-size: 40px;
     color: #4162f6;
+    padding-left: 10px;
 }
 
 .add-to-do input{
@@ -140,7 +141,7 @@ color: white;
     background-color: transparent;
     border: none;
     font-size: 20px;
-    padding-left:10px;
+    padding-left:20px;
 }
 .add-to-do input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     color: #4162f6;
