--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ color: white;
     position: absolute;
     left: 50px;
     height: 35px;
-    width: 310px;
+    width: 85%;
     background-color: transparent;
     border: none;
     font-size: 20px;
